--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "@graphql-tools/schema": "^10.0.0",
     "better-sqlite3": "^9.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^3.0.1",
-    "nanoid": "^5.0.1"
+    "nanoid": "^5.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
