--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@apollo/client": "^3.8.5",
     "bulma": "^0.9.4",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
