--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^3.0.1",
